scripts/k8s/pkhub/keyssrv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyssrv
  namespace: pkhub
  labels:
    app: keyssrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keyssrv
  template:
    metadata:
      annotations:
        linkerd.io/inject: "enabled"
      labels:
        app: keyssrv
    spec:
      containers:
      - name: keyssrv
        image: 351415477200.dkr.ecr.eu-west-1.amazonaws.com/keyssrv:stage
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: "/"
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
#        livenessProbe:
#          httpGet:
#            path: "/"
#            port: 3001
#            scheme: HTTPS
#          initialDelaySeconds: 15
#          periodSeconds: 20
        resources:
          limits:
            memory: "2028Mi"
          requests:
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: keyssrv
  namespace: pkhub
spec:
  selector:
    app: keyssrv
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keyssrv
  namespace: pkhub
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "500"
    nginx.ingress.kubernetes.io/limit-rps: "200"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "pkhub.io"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: keyssrv
          servicePort: 3001
  - host: "*.pkhub.io"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: keyssrv
          servicePort: 3001
